# Zlija

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: ci.yml
examples/: basic_usage.rs
src/: checksum.rs  compression.rs  config.rs  error.rs  lib.rs
